[gd_scene load_steps=7 format=3 uid="uid://biul0qb0a8swa"]

[ext_resource type="Script" uid="uid://b66p3r0mf1itt" path="res://game/DemoMain.gd" id="1"]
[ext_resource type="PackedScene" path="res://game/ui/FPSCounter.tscn" id="2"]
[ext_resource type="FontFile" uid="uid://d28sv0htum78d" path="res://game/assets/monogram_extended.ttf" id="3"]
[ext_resource type="PackedScene" uid="uid://c5xgqi0ik2bpc" path="res://game/ui/MatchWinCounter.tscn" id="4"]

[sub_resource type="FontFile" id="1"]
fallbacks = Array[Font]([ExtResource("3")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/20/0/ascent = 0.0
cache/0/20/0/descent = 0.0
cache/0/20/0/underline_position = 0.0
cache/0/20/0/underline_thickness = 0.0
cache/0/20/0/scale = 1.0
cache/0/30/0/ascent = 0.0
cache/0/30/0/descent = 0.0
cache/0/30/0/underline_position = 0.0
cache/0/30/0/underline_thickness = 0.0
cache/0/30/0/scale = 1.0
cache/0/40/0/ascent = 0.0
cache/0/40/0/descent = 0.0
cache/0/40/0/underline_position = 0.0
cache/0/40/0/underline_thickness = 0.0
cache/0/40/0/scale = 1.0

[sub_resource type="FontFile" id="2"]
fallbacks = Array[Font]([ExtResource("3")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[node name="Main" type="Node2D"]
script = ExtResource("1")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MessageLabel" type="Label" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -667.0
offset_top = 158.0
offset_right = 25.0
offset_bottom = 349.0
grow_horizontal = 2
scale = Vector2(2, 2)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("1")
theme_override_font_sizes/font_size = 40
horizontal_alignment = 1

[node name="PingLabel" type="Label" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -414.0
offset_top = 1034.0
offset_right = -238.0
offset_bottom = 1069.0
grow_horizontal = 2
scale = Vector2(4.76016, 1.89819)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("1")
text = "Ping:160 ms"
horizontal_alignment = 1

[node name="RollbackFrameLabel" type="Label" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -387.0
offset_top = 1003.0
offset_right = -115.0
offset_bottom = 1038.0
grow_horizontal = 2
scale = Vector2(2.82523, 1.90873)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("1")
text = "RollbackFrame: 2F"
horizontal_alignment = 1

[node name="SpectatorLabel" type="Label" parent="CanvasLayer"]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -274.0
offset_top = 962.0
offset_right = -97.9999
offset_bottom = 997.0
grow_horizontal = 2
scale = Vector2(3.09293, 2.10854)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("1")
horizontal_alignment = 1

[node name="P1Name" type="Label" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -488.0
offset_top = 15.0
offset_right = -288.0
offset_bottom = 50.0
grow_horizontal = 2
scale = Vector2(1.40754, 1.36652)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("1")
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1

[node name="P2Name" type="Label" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 297.0
offset_top = 17.0
offset_right = 497.0
offset_bottom = 52.0
grow_horizontal = 2
scale = Vector2(1.46144, 1.32929)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("1")
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1

[node name="DebugLabel" type="Label" parent="CanvasLayer"]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -885.0
offset_top = 119.0
offset_right = 115.0
offset_bottom = 619.0
scale = Vector2(1.57576, 0.666667)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("1")
theme_override_font_sizes/font_size = 30
text = "TEST
"

[node name="SyncLostLabel" type="Label" parent="CanvasLayer"]
visible = false
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -271.0
offset_top = 22.0
offset_right = -169.0
offset_bottom = 35.0
grow_horizontal = 0
scale = Vector2(2.53005, 3.15814)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("2")
text = "Regaining sync..."

[node name="WinCounterP1" parent="CanvasLayer" instance=ExtResource("4")]
offset_left = -233.0
offset_right = 238.0
scale = Vector2(1.86156, 2.02927)

[node name="WinCounterP2" parent="CanvasLayer" instance=ExtResource("4")]
offset_left = 174.0
offset_top = 7.0
offset_right = 645.0
offset_bottom = 57.0
scale = Vector2(1.93399, 2.10294)

[node name="FPSCounter" parent="CanvasLayer" instance=ExtResource("2")]
offset_left = 928.0
offset_top = 5.0
offset_right = 975.0
offset_bottom = 28.0
